--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1693.0",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.2",
     "recharts": "^3.6.0",
     "web-vitals": "^2.1.4"
   },
