--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1693.0",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
@@ -25,7 +26,8 @@
     "react-select": "^5.10.2",
     "react-transition-group": "^4.4.5",
     "recharts": "^3.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
